@@ -1,15 +1,15 @@
 FROM openjdk:8-slim
  
 ENV TINI_VERSION v0.18.0
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
 RUN chmod +x /tini
 ENTRYPOINT ["/tini", "--"]
-# CMD ["/run.sh"]
+CMD ["/run.sh"]
  
 COPY run.sh /run.sh
-# RUN chmod +x /run.sh
+RUN chmod +x /run.sh
  
 COPY build/libs/deps /lib
 COPY build/classes/java/main /classes
-COPY build/libs/my-integration-runtime-0.0.1-SNAPSHOT.jar app.jar
-CMD java -jar /app.jar
